fix: restore human Git identity after Q commits
CRITICAL BUG FIX: Q was not restoring human Git identity after making commits

- Added automatic restoration in commitAsQ method
- Added error handling to ensure restoration even if commit fails
- Prevents human commits from being attributed to Q
- Maintains proper audit trail separation

This addresses the core issue: Q's Git identity was 'sticky' and affecting
subsequent human commits.

--- a/.no-wing/q-git-config.json
+++ b/.no-wing/q-git-config.json
@@ -1,11 +1,11 @@
 {
   "qGitConfig": {
-    "name": "Q (AI Agent 1750720123067)",
-    "email": "q+q-1750720123067-3zswdt0ax@no-wing.ai"
+    "name": "Q (AI Agent 1750720896060)",
+    "email": "q+q-1750720896060-rf367u1sa@no-wing.ai"
   },
   "originalGitConfig": {
-    "name": "Paul Chin Jr.",
+    "name": "Paul Chin Jr",
     "email": "pchinjr@gmail.com"
   },
-  "setupAt": "2025-06-23T23:14:40.452Z"
+  "setupAt": "2025-06-23T23:22:29.331Z"
 }
