--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@aws-sdk/client-iam": "^3.0.0",
     "@aws-sdk/client-lambda": "^3.0.0",
     "@aws-sdk/client-ssm": "^3.0.0",
+    "@aws-sdk/client-sts": "^3.0.0",
     "@octokit/rest": "^20.0.0",
     "chalk": "^4.1.2",
     "commander": "^11.0.0",
