feat: create a new Lambda function for user authentication
Simulated creation by Q (q-1750720896060-rf367u1sa) as Partner-level agent
Real AWS integration in progress.

Timestamp: 2025-06-24T03:48:24.358Z

🤖 Q-Agent: partner
Task-Count: 14
Capability-Level: partner

--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "@aws-sdk/client-lambda": "^3.0.0",
     "@aws-sdk/client-ssm": "^3.0.0",
     "@aws-sdk/client-sts": "^3.0.0",
+    "@aws-sdk/client-s3": "^3.0.0",
+    "@aws-sdk/client-cloudwatch-logs": "^3.0.0",
     "@octokit/rest": "^20.0.0",
+    "jszip": "^3.10.1",
     "chalk": "^4.1.2",
     "commander": "^11.0.0",
     "dotenv": "^16.0.0",
