feat: comprehensive distribution strategy for no-wing framework
📦 Distribution Channels:
✅ npm Package - Global CLI installation
✅ Docker Container - Containerized execution
✅ AWS SAM Repository - Native AWS deployment
✅ GitHub Template - Quick project setup

🚀 Release Infrastructure:
- Automated release script with version management
- Docker multi-arch builds (latest + versioned tags)
- npm publish with proper package metadata
- Installation verification script

📋 Distribution Tiers:
- Open Source (Free) - Core framework
- Enterprise (Paid) - Advanced features
- SaaS Platform (Hosted) - Fully managed

🎯 Installation Methods:
1. npm install -g no-wing (recommended)
2. Docker: docker run pchinjr/no-wing
3. SAM: sam init --location gh:pchinjr/no-wing
4. Template: gh repo create --template pchinjr/no-wing

📊 Success Metrics:
- npm downloads tracking
- Docker pulls monitoring
- GitHub stars/forks
- Community engagement

🛫 Ready for global distribution and adoption!

--- a/package.json
+++ b/package.json
@@ -1,10 +1,31 @@
 {
   "name": "no-wing",
-  "version": "0.1.0",
-  "description": "Autonomous Developer Onboarding System - treating Q as a first-class developer",
+  "version": "1.0.0",
+  "description": "AI development collaboration framework - autonomous AI teammate for AWS infrastructure",
   "main": "dist/index.js",
   "bin": {
     "no-wing": "./dist/cli/index.js"
+  },
+  "keywords": [
+    "ai",
+    "aws",
+    "lambda",
+    "framework",
+    "automation",
+    "infrastructure",
+    "collaboration",
+    "devops",
+    "serverless"
+  ],
+  "author": "Paul Chin Jr <pchinjr@gmail.com>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pchinjr/no-wing.git"
+  },
+  "homepage": "https://github.com/pchinjr/no-wing#readme",
+  "bugs": {
+    "url": "https://github.com/pchinjr/no-wing/issues"
   },
   "scripts": {
     "build": "tsc",
