--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,41 @@
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build outputs
+dist/
+build/
+coverage/
+
+# Environment files
 .env
-/dist
-/node_modules
+.env.local
+.env.*.local
 
 # AWS SAM
 .aws-sam/
-samconfig.toml.bak
-packaged-template.yaml
+samconfig.toml
 
-# IDE
+# no-wing specific
+.no-wing/
+*.log
+
+# IDE files
 .vscode/
 .idea/
 *.swp
 *.swo
 
-# OS
+# OS files
 .DS_Store
 Thumbs.db
 
-# Logs
-*.log
-logs/
+# Test artifacts
+*.test.js
+*.spec.js
 
-# Runtime (but allow Q work log for commits)
-.no-wing/q-identity.json
-.no-wing/q-git-config.json
-response.json
-test-payload.json
+# Temporary files
+*.tmp
+*.temp
