--- a/package.json
+++ b/package.json
@@ -50,14 +50,17 @@
     "SECURITY.md"
   ],
   "dependencies": {
+    "@aws-sdk/client-api-gateway": "^3.0.0",
     "@aws-sdk/client-cloudformation": "^3.0.0",
     "@aws-sdk/client-cloudtrail": "^3.0.0",
     "@aws-sdk/client-iam": "^3.0.0",
+    "@aws-sdk/client-lambda": "^3.0.0",
     "@aws-sdk/client-organizations": "^3.0.0",
     "@aws-sdk/client-sts": "^3.0.0",
     "chalk": "^4.1.2",
     "commander": "^11.0.0",
     "inquirer": "^8.2.6",
+    "jszip": "^3.10.1",
     "ora": "^5.4.1",
     "uuid": "^9.0.0"
   },
