--- a/.gitignore
+++ b/.gitignore
@@ -7,38 +7,73 @@ yarn-error.log*
 # Build outputs
 dist/
 build/
-coverage/
+*.tsbuildinfo
 
-# Environment files
+# Environment variables
 .env
 .env.local
-.env.*.local
-
-# AWS SAM
-.aws-sam/
-samconfig.toml
-
-# no-wing specific
-.no-wing/
-*.log
-
-# Q Workspace - Generated code and projects
-q-workspace/
+.env.development.local
+.env.test.local
+.env.production.local
 
 # IDE files
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
 
-# OS files
+# OS generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
-# Test artifacts
-*.test.js
-*.spec.js
+# Logs
+logs/
+*.log
 
-# Temporary files
-*.tmp
-*.temp
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# AWS
+.aws/
+aws-exports.js
+
+# no-wing specific
+.no-wing/
+q-workspace/
+*.sam-cache/
+.aws-sam/
+
+# Test files
+test-*
+demo-output.txt
