--- a/package.json
+++ b/package.json
@@ -10,23 +10,19 @@
     "build": "tsc",
     "dev": "ts-node src/cli/index.ts",
     "start": "node dist/cli/index.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "clean": "rm -rf dist coverage .no-wing",
-    "prepublishOnly": "npm run clean && npm run build && npm test"
+    "clean": "rm -rf dist .no-wing",
+    "demo": "./demo-hackathon.sh"
   },
   "keywords": [
-    "enterprise",
-    "developer-onboarding", 
-    "ai-assistant",
     "aws",
+    "lambda",
+    "enterprise",
+    "ai-assistant",
+    "developer-onboarding",
     "iam",
     "governance",
     "monitoring",
-    "compliance",
-    "vending",
-    "provisioning"
+    "hackathon"
   ],
   "author": "Paul Chin Jr <pchinjr@gmail.com>",
   "license": "MIT",
@@ -34,29 +30,14 @@
     "type": "git",
     "url": "https://github.com/pchinjr/no-wing.git"
   },
-  "homepage": "https://github.com/pchinjr/no-wing#readme",
-  "bugs": {
-    "url": "https://github.com/pchinjr/no-wing/issues"
-  },
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
   },
-  "files": [
-    "dist/",
-    "docs/",
-    "README.md",
-    "LICENSE",
-    "SECURITY.md"
-  ],
   "dependencies": {
     "@aws-sdk/client-api-gateway": "^3.0.0",
-    "@aws-sdk/client-cloudformation": "^3.0.0",
-    "@aws-sdk/client-cloudtrail": "^3.0.0",
     "@aws-sdk/client-iam": "^3.0.0",
     "@aws-sdk/client-lambda": "^3.0.0",
-    "@aws-sdk/client-organizations": "^3.0.0",
-    "@aws-sdk/client-sts": "^3.0.0",
     "chalk": "^4.1.2",
     "commander": "^11.0.0",
     "inquirer": "^8.2.6",
@@ -66,11 +47,8 @@
   },
   "devDependencies": {
     "@types/inquirer": "^8.2.10",
-    "@types/jest": "^29.5.14",
     "@types/node": "^20.0.0",
     "@types/uuid": "^9.0.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.4.0",
     "ts-node": "^10.0.0",
     "typescript": "^5.0.0"
   }
