--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "chalk": "^4.1.2",
     "commander": "^11.0.0",
     "inquirer": "^8.2.6",
+    "js-yaml": "^4.1.0",
     "jszip": "^3.10.1",
     "ora": "^5.4.1",
     "uuid": "^9.0.0"
