[HUMAN] Transform no-wing: Guardian Angel → Q Service Account Manager
Strategic pivot to solve Q identity masquerading problem.

Key Changes:
• Complete architectural redesign for service account approach
• Q gets own local user, git identity, and AWS credentials per project
• New CLI: setup, status, permissions, audit, cleanup, launch
• Security model: identity separation, least privilege, audit trail
• 4-week MVP roadmap with prioritized implementation tasks

Core Services:
• ProjectDetector: Identify project type and generate Q config
• ServiceAccountManager: Manage Q service account lifecycle

Documentation:
• README.md: Service account focused overview
• MVP_ROADMAP.md: 4-week implementation plan
• ARCHITECTURE.md: Technical architecture and security model
• Development identity framework for meta-development

Meta-principle: Using no-wing conceptual framework to build no-wing itself.
Next: Implement Phase 1 - Local user management and git identity.

Resolves: Q masquerading as user for commits, deployments, and actions
Impact: Secure, auditable, isolated Q identity per project

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "no-wing",
   "version": "1.0.0",
-  "description": "Guardian Angel for Amazon Q - Project-aware AI assistant for AWS serverless developers",
+  "description": "Q Service Account Manager - Give Amazon Q its own identity for secure, auditable project automation",
   "main": "dist/index.js",
   "bin": {
     "no-wing": "./dist/cli/index.js"
@@ -14,12 +14,13 @@
   },
   "keywords": [
     "aws",
-    "serverless",
     "amazon-q",
-    "sam",
-    "guardian",
-    "ai-assistant",
-    "project-context"
+    "service-account",
+    "identity-management",
+    "security",
+    "audit",
+    "automation",
+    "serverless"
   ],
   "author": "Your Name",
   "license": "MIT",
@@ -28,6 +29,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-sts": "^3.0.0",
+    "@aws-sdk/client-iam": "^3.0.0",
     "chalk": "^4.1.2",
     "commander": "^11.0.0",
     "inquirer": "^8.2.6",
