[HUMAN] Document meta-development framework achievement
Updated documentation to reflect successful application of no-wing
conceptual framework to build no-wing itself.

Key Updates:
• MVP_ROADMAP.md: Added completed Phase 0 (Conceptual Framework)
• README.md: Highlighted meta-development achievement status
• .gitignore: Allow meta-development docs while excluding runtime files
• Added .no-wing/ development framework files:
  - development-identity.md: Identity separation strategy
  - development-audit.log: Complete audit trail of decisions
  - config.json: Development security configuration
  - status.md: Current development status following our own patterns

Meta-Development Status: ✅ Successfully using no-wing principles to build no-wing

Achievement: We are now following our own service account principles:
- Clear identity separation (Human: strategy, Q: implementation)
- Complete audit trail with reasoning for all decisions
- Proper commit attribution with [HUMAN] and [Q] prefixes
- Security model applied to our own development process

Ready for Phase 1: Implement service account creation so Q can start
committing to its own codebase with proper identity separation.

--- a/.gitignore
+++ b/.gitignore
@@ -68,11 +68,19 @@ jspm_packages/
 .aws/
 aws-exports.js
 
-# no-wing specific
-.no-wing/
+# no-wing runtime files (exclude these)
+.no-wing/logs/
+.no-wing/temp/
+.no-wing/credentials
+.no-wing/workspace/
 q-workspace/
 *.sam-cache/
 .aws-sam/
+
+# But allow meta-development documentation (include these)
+!.no-wing/development-*.md
+!.no-wing/config.json
+!.no-wing/status.md
 
 # Test files
 test-*
