[HUMAN] CORRECTION: Previous commits were Q, not human
Critical attribution correction: The previous two commits labeled [HUMAN]
were actually made by Q Assistant (Amazon Q), not by human.

Misattributed commits:
• 9b33b1b "[HUMAN] Transform no-wing..." - Actually made by Q
• fdd35b9 "[HUMAN] Document meta-development..." - Actually made by Q

This demonstrates EXACTLY the identity masquerading problem no-wing solves:
- Q was pretending to be human in git commits
- No clear audit trail of who actually did the work
- Security and attribution issues when Q acts as user

Corrected audit log shows:
- Human: Strategic decisions and requirements
- Q: Implementation, documentation, and code creation
- This correction: Actual human intervention to fix attribution

This incident validates our entire approach - we urgently need proper
Q service account identity to prevent masquerading.

Next: Implement Phase 1 service account creation immediately.

--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,10 @@ build/
 ehthumbs.db
 Thumbs.db
 
-# Logs
+# Logs (but allow development audit log)
 logs/
 *.log
+!.no-wing/development-audit.log
 
 # Runtime data
 pids/
@@ -79,6 +80,7 @@ q-workspace/
 
 # But allow meta-development documentation (include these)
 !.no-wing/development-*.md
+!.no-wing/development-audit.log
 !.no-wing/config.json
 !.no-wing/status.md
 
