[Q] Implement Phase 1: Core Infrastructure - Local User Management & Git Identity
PROPERLY ATTRIBUTED: This commit was made by Q Assistant (Amazon Q), not human.

Phase 1 Implementation Complete:
✅ Local User Management
  • ProjectDetector: Detect SAM/CDK/Serverless projects, generate Q config
  • ServiceAccountManager: Create/manage Q service account lifecycle
  • Username sanitization and safe service account creation

✅ Git Identity Setup
  • Q commits with own identity: 'Q Assistant ({project})'
  • Proper git configuration in Q's home directory
  • Email format: q-assistant+{project}@no-wing.dev

✅ Project Detection
  • SAM projects (template.yaml) with Lambda/API Gateway permissions
  • CDK projects (cdk.json) with full CDK permissions
  • Serverless Framework (serverless.yml) with framework permissions
  • Generic fallback with basic AWS permissions

✅ Basic CLI Structure
  • no-wing setup: Create Q service account (with --dry-run, --force)
  • no-wing status: Show service account health and configuration
  • Updated for Node 22, ES modules, minimal config for future Deno support

✅ Testing with Tape
  • 37 tests passing for ProjectDetector and ServiceAccountManager
  • Test coverage for project detection, config generation, status checking
  • Validates username sanitization and service account lifecycle

Technical Details:
• Node 22 + TypeScript + ES modules
• Tape testing framework (37 tests, all passing)
• Minimal configuration for future Deno migration
• Proper service account security model implementation

Ready for Phase 2: AWS Integration (IAM user creation, credentials, permissions)

This demonstrates Q building its own service account management system!

--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "description": "Q Service Account Manager - Give Amazon Q its own identity for secure, auditable project automation",
   "main": "dist/index.js",
+  "type": "module",
   "bin": {
     "no-wing": "./dist/cli/index.js"
   },
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node src/cli/index.ts",
+    "dev": "tsx src/cli/index.ts",
     "start": "node dist/cli/index.js",
+    "test": "node --test test/**/*.test.js",
+    "test:tape": "tape test/**/*.test.js",
     "clean": "rm -rf dist .no-wing"
   },
   "keywords": [
@@ -25,7 +28,7 @@
   "author": "Your Name",
   "license": "MIT",
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=22.0.0"
   },
   "dependencies": {
     "@aws-sdk/client-sts": "^3.0.0",
@@ -37,8 +40,10 @@
   },
   "devDependencies": {
     "@types/inquirer": "^8.2.10",
-    "@types/node": "^20.0.0",
-    "ts-node": "^10.0.0",
+    "@types/node": "^22.0.0",
+    "@types/tape": "^5.6.4",
+    "tape": "^5.7.2",
+    "tsx": "^4.0.0",
     "typescript": "^5.0.0"
   }
 }
